<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pin_button_1"
                android:text="@string/number_1"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_4"
                android:text="@string/number_4"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_7"
                android:text="@string/number_7"
                style="@style/PinPadButtonsStyle" />

            <TextView style="@style/PinPadButtonsStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pin_button_2"
                android:text="@string/number_2"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_5"
                android:text="@string/number_5"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_8"
                android:text="@string/number_8"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_0"
                android:text="@string/number_0"
                style="@style/PinPadButtonsStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pin_button_3"
                android:text="@string/number_3"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_6"
                android:text="@string/number_6"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_9"
                android:text="@string/number_9"
                style="@style/PinPadButtonsStyle" />

            <TextView
                android:id="@+id/pin_button_delete"
                android:text="Del"
                style="@style/PinPadButtonsStyle" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/pin_bottom_buttons_layout" />

</LinearLayout>
